backend-base-devops-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-base-devops-svc
  namespace: devops
spec:
  type: NodePort
  selector:
    app: backend-base-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
