kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-base-devop-deployment
  namespace: devops
  labels:
    app: backend-base-devop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-base-devop
  template:
    metadata:
      labels:
        app: backend-base-devop
    spec:
      containers:
      - name: backend-base-devop
        image: localhost:8082/backend-base-devop:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: backend-base-devop-svc
  namespace: devops
  labels:
    app: backend-base-devop
spec:
  selector:
    app: backend-base-devop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-base-devop-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /proyecto(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-base-devop-svc
            port:
              number: 80
